Added backgrounds and btn for Home page

--- a/index.html
+++ b/index.html
@@ -31,14 +31,67 @@
 				</ul>
 			</div>
 		</header>
+		<!-- Section A: Model S -->
 		<section class="section-a text-center bg">
 			<div class="text">
-				<h1>Model S</h1>
+				<h1>Model X</h1>
 				<p>Order Online for <span>Touchless Delivery</span></p>
 			</div>
 			<div class="button">
 				<button class="btn btn-dark">Custom Order</button>
 				<button class="btn btn-light">Existing Inventory</button>
+			</div>
+		</section>
+		<!-- Section B: Model Y -->
+		<section class="section-b text-center bg">
+			<div class="text">
+				<h1>Model Y</h1>
+				<p>Order Online for <span>Touchless Delivery</span></p>
+			</div>
+			<div class="button">
+				<button class="btn btn-dark">Custom Order</button>
+				<button class="btn btn-light">Existing Inventory</button>
+			</div>
+		</section>
+		<!-- Section C: Model X -->
+		<section class="section-c text-center bg">
+			<div class="text">
+				<h1>Model X</h1>
+				<p>Order Online for <span>Touchless Delivery</span></p>
+			</div>
+			<div class="button">
+				<button class="btn btn-dark">Custom Order</button>
+				<button class="btn btn-light">Existing Inventory</button>
+			</div>
+		</section>
+		<!-- Section D: Model 3 -->
+		<section class="section-d text-center bg">
+			<div class="text">
+				<h1>Model 3</h1>
+				<p>Order Online for <span>Touchless Delivery</span></p>
+			</div>
+			<div class="button">
+				<button class="btn btn-dark">Custom Order</button>
+				<button class="btn btn-light">Existing Inventory</button>
+			</div>
+		</section>
+		<!-- Section E: Solar and Powerwall -->
+		<section class="section-e text-center bg">
+			<div class="text">
+				<h1>Solar and Powerwall</h1>
+				<p>Power Everything</p>
+			</div>
+			<div class="button">
+				<button class="btn btn-dark">Learn More</button>
+			</div>
+		</section>
+		<!-- Sectio F: Accessories -->
+		<section class="section-f text-center bg">
+			<div class="text">
+				<h1>Accessories</h1>
+			</div>
+			<div class="button">
+				<button class="btn btn-dark">Shop Now</button>
 			</div>
 		</section>
 	</body>
