--- a/index.html
+++ b/index.html
@@ -94,5 +94,11 @@
 				<button class="btn btn-dark">Shop Now</button>
 			</div>
 		</section>
+		<script
+			src="https://code.jquery.com/jquery-3.6.1.min.js"
+			integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+			crossorigin="anonymous"
+		></script>
+		<script src="./script/app.js"></script>
 	</body>
 </html>
